@@ -219,6 +219,13 @@ views.filter.search_api_fulltext:
       sequence:
         type: string
         label: Field name
+    expose:
+      type: mapping
+      label: 'Exposed'
+      mapping:
+        placeholder:
+          type: label
+          label: 'Placeholder'
 
 views.filter.search_api_language:
   type: views.filter.language
