@@ -123,11 +123,11 @@ class SearchApiFulltext extends FilterPluginBase {
   public function defineOptions() {
     $options = parent::defineOptions();
 
-    $options['parse_mode'] = ['default' => 'terms'];
     $options['operator']['default'] = 'and';
-
-    $options['min_length']['default'] = '';
-    $options['fields']['default'] = [];
+    $options['parse_mode'] = ['default' => 'terms'];
+    $options['min_length'] = ['default' => ''];
+    $options['fields'] = ['default' => []];
+    $options['expose']['contains']['placeholder'] = ['default' => ''];
 
     return $options;
   }
@@ -191,6 +191,21 @@ class SearchApiFulltext extends FilterPluginBase {
   /**
    * {@inheritdoc}
    */
+  public function buildExposeForm(&$form, FormStateInterface $form_state) {
+    parent::buildExposeForm($form, $form_state);
+
+    $form['expose']['placeholder'] = [
+      '#type' => 'textfield',
+      '#default_value' => $this->options['expose']['placeholder'],
+      '#title' => $this->t('Placeholder'),
+      '#size' => 40,
+      '#description' => $this->t('Hint text that appears inside the field when empty.'),
+    ];
+  }
+
+  /**
+   * {@inheritdoc}
+   */
   protected function valueForm(&$form, FormStateInterface $form_state) {
     parent::valueForm($form, $form_state);
 
@@ -200,6 +215,9 @@ class SearchApiFulltext extends FilterPluginBase {
       '#size' => 30,
       '#default_value' => $this->value,
     ];
+    if (!empty($this->options['expose']['placeholder'])) {
+      $form['value']['#attributes']['placeholder'] = $this->options['expose']['placeholder'];
+    }
   }
 
   /**
