@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2948659 by drunken monkey, borisson_, bskibinski: Added support for HTML5
+  placeholder in Views exposed filters.
 - #2951055 by bradjones1, borisson_, drunken monkey: Fixed documentation for
   IndexInterface::addField().
 - #2945560 by mkalkbrenner, drunken monkey, borisson_: Fixed handling of
